--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,12 +2,11 @@ FROM ghcr.io/astral-sh/uv:python3.12-bookworm-slim
 
 WORKDIR /app
 
-COPY pyproject.toml uv.lock README.md alembic.ini ./
+COPY pyproject.toml uv.lock README.md ./
 
 RUN uv sync --frozen --no-editable
 
 COPY app ./app
-COPY migrations ./migrations
 
 EXPOSE 8000
 
