--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,8 +7,10 @@ requires-python = ">=3.12"
 dependencies = [
     "asyncpg>=0.30.0",
     "fastapi>=0.121.2",
+    "langchain-core>=0.3.0",
     "langchain-openai>=1.0.2",
     "langgraph>=1.0.3",
+    "pydantic>=2.0.0",
     "pydantic-settings>=2.12.0",
     "python-dotenv>=1.2.1",
     "sqlalchemy>=2.0.44",
