--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -16,3 +16,11 @@ dependencies = [
     "sqlalchemy>=2.0.44",
     "uvicorn[standard]>=0.38.0",
 ]
+
+[project.optional-dependencies]
+test = [
+    "pytest>=8.0.0",
+    "pytest-asyncio>=0.23.0",
+    "httpx>=0.27.0",
+    "aiosqlite>=0.19.0",
+]
